# daedalus

./: .gitignore  .gitmodules  .nvim-dap-profiles.toml  AtlasModules.cmake  CMakeLists.txt  Makefile  README.md  flake.nix
include/: CMakeLists.txt
include/daedalus/: Daedalus.hpp  IDaedalus.hpp
src/: CMakeLists.txt
src/daedalus/: Daedalus.cpp  main.cpp
